<resources>
    <string name="app_name">Mentor Me</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_account_edit">AccountEditActivity</string>

    <string name="edit_name">Enter new name</string>
    <string name="edit_password">Enter new password</string>
    <string name="edit_location">Enter City</string>
    <string name="is_male">Male</string>
    <string name="is_female">Female</string>
    <string name="check_diet">Diet</string>
    <string name="check_religion">Religion</string>
    <string name="check_housing">Housing</string>
    <string name="check_sports">Sports</string>
    <string name="button_save">Save Profile</string>
    <string name="button_saved">Changes Saved!</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Password must be 8-16 characters long</string>
</resources>
