<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ryan.jake.mentorme.AccountEditActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_name_box"
            android:hint="Enter new name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_password_box"
            android:hint="Enter new password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_location_box"
            android:hint="Enter new city" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="33dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:text="Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editmaleradioButton"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editfemaleradioButton"
                    android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:text="Interests:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_weight="0.10" />

        <CheckBox
            android:text="@string/check_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox" />

        <CheckBox
            android:text="@string/check_housing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2" />

        <CheckBox
            android:text="@string/check_religion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3" />

        <CheckBox
            android:text="@string/check_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox4" />

        <Button
            android:text="@string/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button" />


    </LinearLayout>
</RelativeLayout>




